[gd_scene load_steps=10 format=3 uid="uid://em7larvq8lrm"]

[ext_resource type="Script" uid="uid://c0mq3gcctbu4d" path="res://pause.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dbj10iq6j0ahu" path="res://IMPACT.TTF" id="2"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://ariblk.ttf" id="3"]
[ext_resource type="AudioStream" uid="uid://daax0sm4wiefg" path="res://uihover.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://dh6pm2jo1420s" path="res://uipress.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://chbwgwjhw1tmf" path="res://uirelease.wav" id="6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l48gv"]

[sub_resource type="Theme" id="Theme_aq7p1"]
default_font = ExtResource("3")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3")
Panel/styles/panel = SubResource("StyleBoxEmpty_l48gv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6eyaj"]

[node name="PauseMenu" type="Node2D"]
process_mode = 3
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
visible = false
offset_right = 640.0
offset_bottom = 480.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
texture_filter = 4
layout_mode = 0
offset_left = 168.0
offset_top = 176.0
offset_right = 218.0
offset_bottom = 199.0
scale = Vector2(5.75743, 4.51403)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[pulse]Paused!"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="resume" type="Button" parent="Panel"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0578125
anchor_top = -0.0666667
anchor_right = 0.0578125
anchor_bottom = -0.0666667
offset_left = 192.0
offset_top = 280.0
offset_right = 272.0
offset_bottom = 298.0
scale = Vector2(2.28, 2.28)
theme = SubResource("Theme_aq7p1")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6eyaj")
text = "Resume"
metadata/_edit_use_anchors_ = true

[node name="restart" type="Button" parent="Panel"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0578125
anchor_top = 0.0166667
anchor_right = 0.0578125
anchor_bottom = 0.0166667
offset_left = 192.0
offset_top = 280.0
offset_right = 272.0
offset_bottom = 298.0
scale = Vector2(2.28, 2.28)
theme = SubResource("Theme_aq7p1")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6eyaj")
text = "Restart"
metadata/_edit_use_anchors_ = true

[node name="quit" type="Button" parent="Panel"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.05625
anchor_bottom = 0.1
offset_left = 192.0
offset_top = 280.0
offset_right = 272.0
offset_bottom = 298.0
scale = Vector2(2.28, 2.28)
theme = SubResource("Theme_aq7p1")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6eyaj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6eyaj")
text = "Quit to Menu"
metadata/_edit_use_anchors_ = true

[node name="Uihover" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("4")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("5")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("6")
volume_db = -10.0
mix_target = 2

[connection signal="button_down" from="Panel/resume" to="." method="_on_resume_button_down"]
[connection signal="mouse_entered" from="Panel/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Panel/resume" to="." method="_on_resume_pressed"]
[connection signal="button_down" from="Panel/restart" to="." method="_on_restart_button_down"]
[connection signal="mouse_entered" from="Panel/restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="Panel/restart" to="." method="_on_restart_pressed"]
[connection signal="button_down" from="Panel/quit" to="." method="_on_quit_button_down"]
[connection signal="mouse_entered" from="Panel/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Panel/quit" to="." method="_on_quit_pressed"]
